[gd_scene load_steps=4 format=3 uid="uid://dyn25gxnaw3v8"]

[ext_resource type="Script" uid="uid://c028e2miovqxo" path="res://beatcheck/beat.gd" id="1_ro3y2"]
[ext_resource type="Texture2D" uid="uid://c1tp7pqe622b5" path="res://icon.svg" id="2_g2loo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26rk8"]
size = Vector2(8.243593, 46)

[node name="beat_check" type="CharacterBody2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource("1_ro3y2")

[node name="good" type="Area2D" parent="StaticBody2D"]
position = Vector2(19.000061, 0)
scale = Vector2(-2.8153443, -38.206863)

[node name="d" type="CollisionShape2D" parent="StaticBody2D/good"]
position = Vector2(10.655912, 1.0469323)
scale = Vector2(0.9999999, 1)
shape = SubResource("RectangleShape2D_26rk8")

[node name="mid" type="Area2D" parent="StaticBody2D"]
rotation = 3.1415927
scale = Vector2(6.8131623, 38.438328)

[node name="s" type="CollisionShape2D" parent="StaticBody2D/mid"]
position = Vector2(7.1919622, 1.040628)
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_26rk8")

[node name="s2" type="CollisionShape2D" parent="StaticBody2D/mid"]
position = Vector2(-4.2564664, 0.9365654)
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_26rk8")

[node name="bad" type="Area2D" parent="StaticBody2D"]
position = Vector2(-140, 49)
rotation = 3.1415927
scale = Vector2(10.424158, 38.493473)

[node name="f" type="CollisionShape2D" parent="StaticBody2D/bad"]
position = Vector2(-1.7267575, 1.870447)
shape = SubResource("RectangleShape2D_26rk8")

[node name="f2" type="CollisionShape2D" parent="StaticBody2D/bad"]
position = Vector2(-23.023441, 0.5455476)
shape = SubResource("RectangleShape2D_26rk8")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0.10980392, 0.3372549)
position = Vector2(-10, 1281)
rotation = -3.1415925
scale = Vector2(0.16732687, 38.206863)
texture = ExtResource("2_g2loo")

[connection signal="area_entered" from="StaticBody2D/good" to="StaticBody2D" method="_on_good_area_entered"]
[connection signal="area_exited" from="StaticBody2D/good" to="StaticBody2D" method="_on_good_area_exited"]
[connection signal="body_entered" from="StaticBody2D/good" to="StaticBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="StaticBody2D/good" to="StaticBody2D" method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="StaticBody2D/mid" to="StaticBody2D" method="_on_mid_area_entered"]
[connection signal="area_exited" from="StaticBody2D/mid" to="StaticBody2D" method="_on_mid_area_exited"]
[connection signal="area_entered" from="StaticBody2D/bad" to="StaticBody2D" method="_on_bad_area_entered"]
[connection signal="area_exited" from="StaticBody2D/bad" to="StaticBody2D" method="_on_bad_area_exited"]
